--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ install:
       }
   - cmd: SET JAVA_HOME=C:\Program Files\Java\jdk1.8.0
   - cmd: SET PATH=C:\sbt\sbt\bin;%JAVA_HOME%\bin;%PATH%
-  - cmd: SET SBT_OPTS=-XX:MaxPermSize=2g -Xmx4g -Xss2m
+  - cmd: SET SBT_OPTS=-Xmx4g -Xss2m
   - git submodule update --init --recursive
 build_script:
   - sbt ++2.11.12 clean compile coreJVM/publishLocal
