Improve code clarity with danglingParentheses = true

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -13,3 +13,6 @@ spaces.inImportCurlyBraces = true
 # http://docs.scala-lang.org/style/indentation.html#methods-with-numerous-arguments
 align.openParenCallSite = false
 align.openParenDefnSite = false
+
+# For better code clarity
+danglingParentheses = true
