--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,7 +5,7 @@ init:
 
 install:
   - cinst jdk8 -params 'installdir=C:\\jdk8'
-  - cinst jdk9 -version 9.0.4.11 -params 'installdir=C:\\jdk9'
+  - cinst jdk10 -params 'installdir=C:\\jdk10'
   - SET JAVA_HOME=C:\jdk8
   - SET PATH=C:\jdk8\bin;%PATH%
 
@@ -22,7 +22,7 @@ install:
   - SET SBT_OPTS=-XX:MaxPermSize=2g -Xmx4g -Dfile.encoding=UTF8
 
 test_script:
-  - sbt "-Dsbt.build.version=1.0.4" universal:packageBin
+  - sbt "-Dsbt.build.version=1.1.2" universal:packageBin
   - cd citest
   - test.bat
   - test1.bat
