--- a/vscode-sbt-scala/client/package.json
+++ b/vscode-sbt-scala/client/package.json
@@ -52,7 +52,8 @@
     "postinstall": "node ./node_modules/vscode/bin/install"
   },
   "dependencies": {
-    "vscode": "^1.1.5",
-    "vscode-languageclient": "^3.4.2"
+    "vscode": "^1.1.16",
+    "vscode-languageclient": "^3.4.2",
+    "hoek": "^4.2.1"
   }
 }
