jabba 0.9.6 (no sudo)
Ref https://github.com/shyiko/jabba/issues/190
Bumping to jabba 0.9.6 fixes sporaditc permission issues.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,10 @@ matrix:
 matrix:
   include:
   - env: SBT_CMD="scripted java/*"
-    sudo: true
     before_install:
-      - curl -sL https://raw.githubusercontent.com/shyiko/jabba/0.9.4/install.sh | bash && . ~/.jabba/jabba.sh
+      - curl -sL https://raw.githubusercontent.com/shyiko/jabba/0.9.6/install.sh | bash && . ~/.jabba/jabba.sh
     install:
-      - sudo /home/travis/.jabba/bin/jabba install openjdk@1.10
+      - /home/travis/.jabba/bin/jabba install openjdk@1.10
 
 env:
   global:
